# FunLang

./: FunLang.cabal
app/: Main.hs
src/: Compiler.hs  Language.hs  Lexer.hs  Parser.hs  TIM.hs  Types.hs
src/Compiler/: Grammar.y  Lexer.hs  Lexer2.x  Parser.hs  Tokens.x  Types.hs
src/TIM/: Compiler.hs  Evaluator.hs  FunQuoter.hs  Heap.hs  Machine.hs  Types.hs
src/Utils/: PrettyPrint.hs
test/: ParserTest.hs  Spec.hs
testSrc/: nestedLet.fl  prelude.fl  simpleMain.fl
