name: FunLang
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/FunLang#readme
synopsis: Initial project template from stack
description:
    Please see README.md
category: Web
author: Author name here

source-repository head
    type: git
    location: https://github.com/thomkoehler/FunLang


library
    exposed-modules:
        Compiler,
        Language,
        TIM

    ghc-options: -Wall

    build-depends:
        base >=4.7 && <5,
        parsec >=3.1,
        mtl >=2.2,
        indents >=0.3,
        text >=1.2,
        bytestring >= 0.10.8.1,
        containers -any,
        GenericPretty >= 1.2,
        pretty >= 1.1,
        array >= 0.5.1,
        template-haskell >= 2.11.0.0

    default-language: Haskell2010

    hs-source-dirs: src

    other-modules:
        Compiler.Tokens,
        Compiler.Grammar,
        TIM.Evaluator,
        TIM.Heap,
        TIM.Compiler,
        TIM.Types,
        Utils.PrettyPrint,
        TIM.FunQuoter

   build-tools: alex, happy

executable FunLang
    main-is: Main.hs
    build-depends:
        base -any,
        FunLang -any,
        text >=1.2,
        pretty >= 1.1,
        GenericPretty >= 1.2,
        bytestring >= 0.10.8.1
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite FunLang-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        HTF >= 0.13,
        raw-strings-qq >= 1.1,
        text >=1.2,
        FunLang -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    other-modules:
        ParserTest
